--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cocacola</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+    
 </head>
 
 <body>
@@ -31,6 +31,10 @@
                     the greatest drinks ever.</p>
                 <a href="#">Learn More</a>
             </div>
+            <div class="imgBox">
+                <div><img src="/cocacola1.png"></div>
+            </div>
+
         </div>
         <ul class="sci">
             <li><a href="#"><img src="./facebook.png"></a></li>
